@@ -5,7 +5,8 @@ Version 0.1.1 (2016-10-03)
 	* Support draw operations
 	* Add vips_error_buffer(), remove docref messages
 	* Return 0/-1 everywhere for error
-	* Vips_image_get() returns ["out" => value] | -1
+	* vips_image_get() returns ["out" => value] | -1
+	* vips_image_get() returns built-in enums as strings
 	* Fix type conversions
 	* Add vips_image_remove()
 	* Add vips_cache_set_*() 
